# PyModel

./: README.md  pyproject.toml
example/: full_adder.py
pymodel/: __init__.py  bit_model.py
tests/: test_bit_model.py
