[project]
name = "pymodel"
version = "0.1.0"
description = "A Hardware Model lib based on Python"
authors = [
    {name = "Jack Yang",email = "jackyyang@github.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
